public/style.css
html,
body {
  height: 100%;
}
body {
  font: 1rem sans-serif;
  margin: 0;
}

button {
  cursor: pointer;
}

:link:focus,
button:focus,
input:focus {
  outline: 3px solid darkorange;
  outline-offset: .4rem;
}

#logout-button {
  font-size: 1.3rem;
  position: absolute;
  padding: .5rem 1rem;
  right: 0;
  top: 0;
}

.wc-loading {
  font-size: 2.6rem;
  font-style: italic;
  font-weight: normal;
  text-align: center;
  margin: 3rem 0;
}

#webchat {
  height: 100%;
  width: 100%;
}

#webchat .main,
#webchat ul {
  font-size: 1.3rem;
}

#webchat small {
  font-size: .95rem;
}

#webchat iframe {
  border: 1px solid #888;
  border-radius: .3rem;
  display: block;
  height: 160px;
  width: 300px;
  margin: .2rem 0;
}

#webchat iframe[ src *= 'radio.net' ] {
  height: 95px;
  width: 360px;
}

#webchat img {
  max-height: 280px;
  object-fit: contain;
  object-position: top left;
}

#webchat img[ src *= Radiogarden ] {
  max-height: 170px;
}

#webchat a[ href *= 'action=' ] {
  color: #aaa;
  cursor: not-allowed;
  font-size: .9rem;
  text-decoration: none;
}

#webchat audio {
  border: 1px solid #888;
  display: block;
  margin-top: .5rem;
  zoom: 1.2;
}

#webchat a[ href *= _AUDIO_ ] {
  display: none;
}

